2022-02-15 Sam Harper
    * tag V03-02-01
    * bug fix: standard paths can now have a trigger results filter if that trigger results filter has usePathStatus=True

2022-02-10 Sam Harper
    * tag V03-02-00
	* reworked datasets to use DatasetPaths to select their events and all that entails
	* support for split and cloned datasets using DatasetPaths
	* adds support for cms.FinalPath, auto generates per stream with DatasetPath
	* streams are now the sum of their datasets and can no longer have unassigned paths
	   * any existing configs with streams with unassigned paths will simply drop them on load
	* bug fix in SwitchProducer reading from DB where it accidentally triggered a hasChanged and then forced it all to be saved again
	* changed EvFOutputModule to GlobalEvFOutputModule
	* added option under tools menu to redraw the GUI
	* note: the only changes to the output python are : streams have their unassigned paths dropped and the output module class changes

2021-11-29 Marino Missiroli
    * tag V03-01-00
	* adds whitespaces around comma preceding Tasks in Paths/EndPaths (changes python output)
	* allows JPythonParser to work from any folder
	* changes name of cms.Schedule to "schedule" (changes python output)

2021-11-04 Sam Harper
    * tag V03-00-08
	* forbid the saving of menus with modules on a task which are also directly on a sequence or path
	* added proxy support for browserconverter which is used by hltGetConfiguration and friends
	* update deploy script to be more integrated with git and append the git hash to non production versions

2021-10-18 Sam Harper
    * tag V03-00-07
	* added Mateusz to admins
	* read only setup for the P5 database added
	* forbidding the saving of menus which have streams that have unassinged paths
	* disabling the option to directly adding a path to a stream
	* parsing bug fix for empty strings
	* diff bug fix where objects with same name but different type (eg module vs switch producer) no longer causes a crash
